fix z-index

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -27,7 +27,7 @@ a{
     position: fixed;
     right: 30px;
     bottom: 30px;
-    z-index: 4;
+    z-index: 11;
     cursor: pointer;
     width: 19px;
     height: 19px;
@@ -203,7 +203,7 @@ main #button:hover{
     top: 30px;
     right: 30px;
     color: #10ac84;
-    z-index: 3;
+    z-index: 11;
 }
 footer{
     text-align: right;
